Fix issue where navigation menu has too much top padding

--- a/saleor/static/scss/components/_header.scss
+++ b/saleor/static/scss/components/_header.scss
@@ -315,7 +315,7 @@
         background-color: $white;
         padding-left: 0;
         padding-right: $global-padding;
-        padding-top: $global-padding * 5;
+        padding-top: $global-padding * 2;
         transition: 0.3s ease-in-out;
         ul {
           text-align: left;
